tests/neg-custom-args/captures/boundary.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/boundary.scala:5:4 ---------------------------------------
 4 |  boundary[AnyRef^]:
 5 |    l1 ?=> // error // error
   |  ^
   |Found:    scala.util.boundary.Label[Object^?]^{cap.rd}
   |Required: scala.util.boundary.Label[Object^]^²
   |
   |where:    ^   refers to the universal root capability
   |          ^²  refers to a fresh root capability classified as Control in the type of value local
   |          cap is a fresh root capability classified as Control created in value local when constructing Capability instance scala.util.boundary.Label[Object^?]
   |
   |Note that capability cap
   |cannot be included in outer capture set ?.
 6 |      boundary[Unit]: l2 ?=>
 7 |        boundary.break(l2)(using l1)
 8 |      ???
   |--------------------------------------------------------------------------------------------------------------------
   |Inline stack trace
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   |This location contains code that was inlined from boundary.scala:70
70 |    val local = Label[T]()
   |                ^^^^^^^^^^
    --------------------------------------------------------------------------------------------------------------------
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/boundary.scala:5:4 ---------------------------------------
 4 |  boundary[AnyRef^]:
 5 |    l1 ?=> // error // error
   |  ^
   |  Found:    scala.util.boundary.Break[AnyRef^] @unchecked
   |  Required: scala.util.boundary.Break[Object^²] @unchecked
   |
   |  where:    ^  refers to the universal root capability
   |            ^² refers to a fresh root capability created in package <empty>
   |
   |  Note that capability cap is not included in capture set {cap}.
 6 |      boundary[Unit]: l2 ?=>
 7 |        boundary.break(l2)(using l1)
 8 |      ???
   |--------------------------------------------------------------------------------------------------------------------
   |Inline stack trace
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   |This location contains code that was inlined from boundary.scala:72
72 |    catch case ex: Break[T] @unchecked =>
   |                   ^
    --------------------------------------------------------------------------------------------------------------------
   |
   | longer explanation available when compiling with `-explain`
